Ajout tests UI RecommendByPlayerCountTest